@@ -432,21 +432,23 @@ argument_list|()
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.ganglia.tagsForPrefix.all"
+literal|"Test.sink.ganglia.tagsForPrefix.all"
 argument_list|,
 literal|"*"
 argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.ganglia.tagsForPrefix.some"
+literal|"Test.sink.ganglia.tagsForPrefix.some"
 argument_list|,
-literal|"NumActiveSinks, NumActiveSources"
+literal|"NumActiveSinks, "
+operator|+
+literal|"NumActiveSources"
 argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.ganglia.tagsForPrefix.none"
+literal|"Test.sink.ganglia.tagsForPrefix.none"
 argument_list|,
 literal|""
 argument_list|)
@@ -466,7 +468,7 @@ name|cb
 operator|.
 name|subset
 argument_list|(
-literal|"test.sink.ganglia"
+literal|"Test.sink.ganglia"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -770,7 +772,7 @@ argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.gsink30.context"
+literal|"Test.sink.gsink30.context"
 argument_list|,
 literal|"test"
 argument_list|)
@@ -778,7 +780,7 @@ comment|// filter out only "test"
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.gsink31.context"
+literal|"Test.sink.gsink31.context"
 argument_list|,
 literal|"test"
 argument_list|)
