@@ -617,7 +617,7 @@ comment|//.add("test.sink.plugin.urls", getPluginUrlsAsString())
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.test.class"
+literal|"Test.sink.test.class"
 argument_list|,
 name|TestSink
 operator|.
@@ -629,28 +629,28 @@ argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.*.source.filter.exclude"
+literal|"Test.*.source.filter.exclude"
 argument_list|,
 literal|"s0"
 argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.source.s1.metric.filter.exclude"
+literal|"Test.source.s1.metric.filter.exclude"
 argument_list|,
 literal|"X*"
 argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.sink1.metric.filter.exclude"
+literal|"Test.sink.sink1.metric.filter.exclude"
 argument_list|,
 literal|"Y*"
 argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.sink2.metric.filter.exclude"
+literal|"Test.sink.sink2.metric.filter.exclude"
 argument_list|,
 literal|"Y*"
 argument_list|)
@@ -966,7 +966,7 @@ comment|//.add("test.sink.plugin.urls", getPluginUrlsAsString())
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.test.class"
+literal|"Test.sink.test.class"
 argument_list|,
 name|TestSink
 operator|.
@@ -978,28 +978,28 @@ argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.*.source.filter.exclude"
+literal|"Test.*.source.filter.exclude"
 argument_list|,
 literal|"s0"
 argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.source.s1.metric.filter.exclude"
+literal|"Test.source.s1.metric.filter.exclude"
 argument_list|,
 literal|"X*"
 argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.sink1.metric.filter.exclude"
+literal|"Test.sink.sink1.metric.filter.exclude"
 argument_list|,
 literal|"Y*"
 argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.sink2.metric.filter.exclude"
+literal|"Test.sink.sink2.metric.filter.exclude"
 argument_list|,
 literal|"Y*"
 argument_list|)
@@ -1260,6 +1260,12 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+specifier|final
+name|int
+name|numThreads
+init|=
+literal|10
+decl_stmt|;
 operator|new
 name|ConfigBuilder
 argument_list|()
@@ -1273,9 +1279,13 @@ argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.Collector.queue.capacity"
+literal|"Test.sink.Collector."
+operator|+
+name|MetricsConfig
+operator|.
+name|QUEUE_CAPACITY_KEY
 argument_list|,
-literal|"20"
+name|numThreads
 argument_list|)
 operator|.
 name|save
@@ -1303,12 +1313,6 @@ operator|.
 name|start
 argument_list|()
 expr_stmt|;
-specifier|final
-name|int
-name|numThreads
-init|=
-literal|10
-decl_stmt|;
 specifier|final
 name|CollectingSink
 name|sink
@@ -1966,7 +1970,7 @@ argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.test.class"
+literal|"Test.sink.test.class"
 argument_list|,
 name|TestSink
 operator|.
@@ -1978,21 +1982,21 @@ argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.hanging.retry.delay"
+literal|"Test.sink.hanging.retry.delay"
 argument_list|,
 literal|"1"
 argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.hanging.retry.backoff"
+literal|"Test.sink.hanging.retry.backoff"
 argument_list|,
 literal|"1.01"
 argument_list|)
 operator|.
 name|add
 argument_list|(
-literal|"test.sink.hanging.retry.count"
+literal|"Test.sink.hanging.retry.count"
 argument_list|,
 literal|"0"
 argument_list|)
